RESOLVED FIXED164902
[CSS Font Loading] FontFaceSet.load() promises don't always fire
https://bugs.webkit.org/show_bug.cgi?id=164902
Summary [CSS Font Loading] FontFaceSet.load() promises don't always fire
Myles C. Maxfield
Reported 2016-11-17 18:20:18 PST
[CSS Font Loading] FontFaceSet.load() promises don't always fire
Attachments
Patch (9.70 KB, patch)
2016-11-17 18:31 PST, Myles C. Maxfield
no flags
Patch (9.62 KB, patch)
2016-11-18 09:38 PST, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2016-11-17 18:31:29 PST
WebKit Commit Bot
Comment 2 2016-11-17 18:33:34 PST
Attachment 295118 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:32: Please consider whether the use of security-sensitive phrasing could help someone exploit WebKit: use-after-free [changelog/unwantedsecurityterms] [3] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Myles C. Maxfield
Comment 3 2016-11-18 09:38:18 PST
Dave Hyatt
Comment 4 2016-11-18 12:31:11 PST
Comment on attachment 295161 [details] Patch r=me
WebKit Commit Bot
Comment 5 2016-11-18 12:56:44 PST
Comment on attachment 295161 [details] Patch Clearing flags on attachment: 295161 Committed r208889: <http://trac.webkit.org/changeset/208889>
WebKit Commit Bot
Comment 6 2016-11-18 12:56:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.